--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,4 @@ edition = "2018"
 
 [dependencies]
 rocket = "0.4.4"
-oxide-auth = "0.4.5"
+oxide-auth = { version = "0.4.5", features = ["rocket-frontend"], default-features = false }
