--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,5 @@ edition = "2018"
 
 [dependencies]
 rocket = "0.4.4"
+rocket_contrib = { version = "0.4.4", features = ["handlebars_templates"], default-features = false }
 oxide-auth = { version = "0.4.5", features = ["rocket-frontend"], default-features = false }
